--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <button id="send-btn">送信</button>
 
 <div id="status">停止中</div>
-<div id="debug">Wait...</div>
+<div id="debug">Wait3...</div>
 
 <script>
 const GAS_URL =
